2000-07-25  Ulrich Drepper  <drepper@redhat.com>

	* libio/Makefile: Add rules build, run, and distribute tst-widetext.c.
	* libio/tst-widetext.c: New file.
	* libio/tst-widetext.input: New file.

	* libio/iogetwline.c (_IO_getwline_info): Pretty print.

	* libio/wfileops.c (_IO_wfile_underflow): Correct not entirely
	empty external buffer correctly.

2000-07-25  Maciej W. Rozycki  <macro@ds2.pg.gda.pl>

	* sysdeps/mips/dl-machine.h (_RTLD_PROLOGUE): Stringify using
	__STRING(entry) and not #entry.
	(_RTLD_EPILOGUE): Likewise.
	* sysdeps/mips/mips64/dl-machine.h: Likewise.

2000-07-25  Andreas Jaeger  <aj@suse.de>

	* stdio-common/Makefile ($(objpfx)tst-unbputc.out): Change parameter
	according to changes in test program, run also with static only
	builds.
	($(objpfx)tst-printf.out): Likewise.

	* stdio-common/tst-unbputc.sh: Likewise.
	* stdio-common/tst-printf.sh: Likewise.

2000-07-25  Ulrich Drepper  <drepper@redhat.com>

	* libio/wfileops.c (_IO_wdo_write): Correct return value.

	* libio/wfileops.c (_IO_wdo_write): Allow partial conversions in the
	loop.

	* libio/fileops.c: Pretty print.

2000-07-23  Bruno Haible  <haible@clisp.cons.org>

	* wctype/wchar-lookup.h: New file.
	* wctype/iswctype.c: Include "wchar-lookup.h".
	(__iswctype): Support alternate locale format with 3-level tables.
	* wctype/iswctype_l.c (__iswctype_l): Likewise.
	* wctype/towctrans.c (__towctrans): Likewise.
	* wctype/towctrans_l.c (__towctrans_l): Likewise.
	* wctype/wcfuncs.c: Include "wchar-lookup.h".
	(__ctype32_wctype, __ctype32_wctrans): Declare external.
	(__iswalnum, __iswalpha, __iswcntrl, __iswdigit, __iswlower,
	__iswgraph, __iswprint, __iswpunct, __iswspace, __iswupper,
	__iswxdigit, towlower, towupper): Support alternate locale format
	with 3-level tables.
	* wctype/wcextra.c (iswblank): Likewise.
	* wctype/wcfuncs_l.c: Include "wchar-lookup.h".
	(__iswalnum_l, __iswalpha_l, __iswcntrl_l, __iswdigit_l, __iswlower_l,